--- a/learn-css/1_2_inline-style.html
+++ b/learn-css/1_2_inline-style.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/assets/images/" />
-    <title>Head Tag</title>
+    <title>Inline Style</title>
   </head>
-  <body></body>
+  <body>
+    <h1 style="color: blue">제목</h1>
+    <div style="width: 100px; height: 100px; border: 1px solid red"></div>
+  </body>
 </html>
