--- a/learn-css/2023.03.27/4_1_table.html
+++ b/learn-css/2023.03.27/4_1_table.html
@@ -5,6 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
+    <style>
+      #movies {
+        border-collapse: collapse;
+        width: 100%;
+      }
+      #movies td,
+      #movies th {
+        border: 1px solid #c3c3c3;
+        padding: 8px;
+      }
+      #movies th {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: left;
+        background-color: green;
+        color: white;
+      }
+
+      #movies tr:hover {
+        /* hover란 마우스가 올라간 해당 tr태그만 색이 변함 */
+        background: grey;
+      }
+      #movies tr:nth-child(even) {
+        /* nth-child(even)은 tr태그의 짝수 형제들을 일컫음 */
+        background-color: grey;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <table id="movies">
+      <tr>
+        <th>영화</th>
+        <th>상영 시간</th>
+        <th>개봉 날짜</th>
+      </tr>
+      <tr>
+        <td>블랙핑크 더 무비</td>
+        <td>100분</td>
+        <td>2021.08.04</td>
+      </tr>
+      <tr>
+        <td>정글 크루즈</td>
+        <td>127분</td>
+        <td>2021.07.28</td>
+      </tr>
+      <tr>
+        <td>보스 베이비2</td>
+        <td>107분</td>
+        <td>2021.07.28</td>
+      </tr>
+      <tr>
+        <td>더 수어사이드 스쿼드</td>
+        <td>132분</td>
+        <td>2021.08.04</td>
+      </tr>
+      <tr>
+        <td>블랙 위도우</td>
+        <td>134분</td>
+        <td>2021.07.07</td>
+      </tr>
+      <tr>
+        <td>방법-제차의</td>
+        <td>109분</td>
+        <td>2021.07.07</td>
+      </tr>
+      <tr>
+        <td>모가디슈</td>
+        <td>121분</td>
+        <td>2021.07.28</td>
+      </tr>
+    </table>
+  </body>
 </html>
