--- a/learn-css/2023.04.04/14_3_flexbox-item.html
+++ b/learn-css/2023.04.04/14_3_flexbox-item.html
@@ -25,28 +25,38 @@
       }
       .item1 {
         /* order: 2;  */
-        flex-grow: 2;
-        flex-shrink: 2;
+        /* flex-grow: 2;
+        flex-shrink: 2; */
+        /* flex-basis: 160px; */
+        /* flex: 4 2 auto; */
+        align-self: flex-end;
       }
       .item2 {
         /* order: 3; */
-        flex-grow: 1;
-        flex-shrink: 1;
+        /* flex-grow: 1;
+        flex-shrink: 1; */
+        /* flex-basis: 20%; */
+        /* flex: 1 1 auto; */
+        align-self: center;
       }
       .item3 {
         /* order: 4; */
-        flex-grow: 1;
-        flex-shrink: 1;
+        /* flex-grow: 1;
+        flex-shrink: 1; */
+        /* flex-basis: 20vw; */
+        /* flex: 1 1 auto; */
       }
       .item4 {
         /* order: 1; */
-        flex-grow: 1;
-        flex-shrink: 1;
+        /* flex-grow: 1;
+        flex-shrink: 1; */
+        /* flex: 1 1 auto; */
       }
       .item5 {
         /* order: 0; */
-        flex-grow: 1;
-        flex-shrink: 1;
+        /* flex-grow: 1;
+        flex-shrink: 1; */
+        /* flex: 1 1 auto; */
       }
     </style>
   </head>
